--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="container">
       <h2>Welcome</h2>
     </div>
-    <script src="jsFunction.js"></script>
+    <script src="obj.js"></script>
   </body>
 </html>
