--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       <h2>Welcome</h2>
     </div>
     <script src="methods.js"></script>
-    <script src="arrayMap.js"></script>
+    <script src="mapArray.js"></script>
   </body>
 </html>
