Filter Array Method

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <h2>Welcome</h2>
     </div>
     <script src="methods.js"></script>
-    <script src="mapArray.js"></script>
+    <!-- <script src="mapArray.js"></script> -->
+    <script src="filterArray.js"></script>
   </body>
 </html>
