--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </div>
     <script src="methods.js"></script>
     <!-- <script src="mapArray.js"></script> -->
-    <script src="filterArray.js"></script>
+    <!-- <script src="filterArray.js"></script> -->
+     <script src="every.js"></script>
   </body>
 </html>
