--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="methods.js"></script>
     <!-- <script src="mapArray.js"></script> -->
     <!-- <script src="filterArray.js"></script> -->
-     <script src="every.js"></script>
+    <!-- <script src="every.js"></script> -->
+    <script src="sort.js"></script>
   </body>
 </html>
