README.md updated

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="mapArray.js"></script> -->
     <!-- <script src="filterArray.js"></script> -->
     <!-- <script src="every.js"></script> -->
-    <script src="sort.js"></script>
+    <!-- <script src="sort.js"></script> -->
+    <script src="reduce.js"></script>
   </body>
 </html>
