--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h2>Welcome</h2>
     </div>
-    <script src="methods.js"></script>
+    <script src="arrayMethods.js"></script>
     <!-- <script src="mapArray.js"></script> -->
     <!-- <script src="filterArray.js"></script> -->
     <!-- <script src="every.js"></script> -->
