--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="filterArray.js"></script> -->
     <!-- <script src="every.js"></script> -->
     <!-- <script src="sort.js"></script> -->
-    <script src="reduce.js"></script>
+    <!-- <script src="reduce.js"></script> -->
+    <script src="destructuring.js"></script>
   </body>
 </html>
